--- a/grid-index.html
+++ b/grid-index.html
@@ -242,6 +242,20 @@
             padding-left:15vw ;
           }
           
+          @media only screen and (max-width: 414px) {
+            body p { 
+                padding:0px;
+            }
+            .container{
+                height: 40vh;
+            }
+            .building{
+                margin-top: 15vh;
+            }
+            .grid-container{
+                margin-top: 15vh;
+            }
+          }
        
     </style>
 </head>
